--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<p> 
-project
-  </p>
+<html>
+    <body>
+        <main>
+            <h1>Photo frames to choose from</h1>
+            <p><img class="solid" src="/uploads/2020/12/mosel-4336787_1920_0_1608987752.jpg"/><img class="dashed" src="/uploads/2020/12/garden-19830_1920_0_1608987806.jpg"/><img class="dotted" src="/uploads/2020/12/scotland-540119_1920_0_1608987752.jpg"/></p>
+        </main>
+    </body>
+</html>
